--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "intlayer": "^8.0.0",
     "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
     "sweetalert2": "^11.26.17",
+    "vite-intlayer": "^8.0.0",
     "vue": "^3.5.24",
-    "vue-i18n": "^11.2.8",
+    "vue-intlayer": "^8.0.0",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
