--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,21 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/postcss": "^4.1.18",
     "dotenv": "^17.2.3",
-    "intlayer": "^8.0.0",
     "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
+    "socket.io-client": "^4.8.3",
     "sweetalert2": "^11.26.17",
-    "vite-intlayer": "^8.0.0",
     "vue": "^3.5.24",
-    "vue-intlayer": "^8.0.0",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.23",
+    "cypress": "^15.9.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
