--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "stripe": "^20.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,6 +31,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.10",
     "@types/socket.io": "^3.0.1",
+    "@types/stripe-v3": "^3.1.33",
     "@types/supertest": "^6.0.3",
     "nodemon": "^3.1.11",
     "prisma": "^5.22.0",
