--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.7.0",
     "@tailwindcss/postcss": "^4.1.18",
     "dotenv": "^17.2.3",
     "lucide-vue-next": "^0.563.0",
